add task specific dates #3

--- a/mobile/3-Tasks/addtasks.html
+++ b/mobile/3-Tasks/addtasks.html
@@ -1920,12 +1920,40 @@ window.addEventListener("click", (e) => {
     if (timesPerMonth !== null && timesPerMonth < 1) timesPerMonth = 1;
 
     let dateValue = "";
-    if (dateMode === "from-to" || dateMode === "specific-days") {
-        dateValue = dateFrom;
-        if (dateTo && dateDisplayTo.style.display !== "none") {
-            dateValue += ` to ${dateTo}`;
-        }
+if (dateMode === "from-to" || dateMode === "specific-days") {
+    dateValue = dateFrom;
+    if (dateTo && dateDisplayTo.style.display !== "none") {
+        dateValue += ` to ${dateTo}`;
     }
+} else if (dateMode === "specific-dates" && specificDates) {
+    // For Specific Dates mode, set dateValue as the range of specific dates
+    const dates = specificDates.split(",").map(date => new Date(date.trim()));
+    const validDates = dates.filter(date => !isNaN(date.getTime()));
+    if (validDates.length > 0) {
+        const minDate = new Date(Math.min(...validDates));
+        const maxDate = new Date(Math.max(...validDates));
+        const formatDate = (date) => {
+            return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
+        };
+        dateValue = `${formatDate(minDate)} to ${formatDate(maxDate)}`;
+    } else {
+        // If no specific dates are selected, set a default range (e.g., today to far future)
+        const today = new Date();
+        const farFuture = new Date(3000, 0, 1);
+        const formatDate = (date) => {
+            return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
+        };
+        dateValue = `${formatDate(today)} to ${formatDate(farFuture)}`;
+    }
+} else {
+    // Default case: set a range from today to far future
+    const today = new Date();
+    const farFuture = new Date(3000, 0, 1);
+    const formatDate = (date) => {
+        return `${date.getFullYear()}-${String(date.getMonth() + 1).padStart(2, '0')}-${String(date.getDate()).padStart(2, '0')}`;
+    };
+    dateValue = `${formatDate(today)} to ${formatDate(farFuture)}`;
+}
 
     const currentAdmin = localStorage.getItem("currentAdminEmail");
 
